src/test/deca/context/valid/5_calcul.deca
// Description:
//    Programme minimaliste traitant une différence et un println.
//
// Resultats:
// Valeur: -1.00000e+00
//
// Historique:
//    cree le 01/01/2022

{
        int i = 1;
        int j = 2;
        float k; 
        k = i - j;
        println("Valeur: ", k);
}
