src/test/deca/context/invalid/38_AInstanceOfInt.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 15: ContextualError: Incorrect types
// 
// Historique:
//    cree le 01/01/2022

class A {
}
{
   A a = new A();
   // Doit etre refuse.
   boolean b = a instanceof int;
}
